Added IEEE SB MUJ Logo

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
         <div class="header-right">
           <img id="ono" src="assets/oneiros.png" alt="Oeiros Logo" />
           <span class="header-divider">X</span>
-          <img id="ieee" src="image/ieee.png" alt="IEEE SB MUJ" />
+          <img id="ieee" src="assets/ieeesbmuj.png" alt="IEEE SB MUJ" />
         </div>
       </div>
     </header>
