Added Cheat Sheet

--- a/index.html
+++ b/index.html
@@ -56,6 +56,12 @@
             >Click Here</a
           >
         </li>
+	<li>
+          Cheat Sheet:
+          <a class="text-blue-400" href="./assets/CS-VenData.pdf"
+            >Click Here</a
+          >
+        </li>
       </ul>
     </div>
 
